--- a/templates/search.html
+++ b/templates/search.html
@@ -16,6 +16,7 @@
                         <option value="">All</option>
                         <option value="marketplace">Marketplace</option>
                         <option value="services">Services</option>
+                        <option value="announcements">Announcements</option>
                     </select>
                 </div>
             </form>
