--- a/templates/services.html
+++ b/templates/services.html
@@ -22,7 +22,7 @@
                     <tr>
                         <td>Buy Services</td>
                         <td id="buy-services-count">0</td>
-                        <td><a href="{{ url_for('category', post_type='services', category='Buy') }}" class “‘btn btn-outline-secondary btn-sm">View</a></td>
+                        <td><a href="{{ url_for('category', post_type='services', category='Buy') }}" class="btn btn-outline-secondary btn-sm">View</a></td>
                     </tr>
                 </tbody>
             </table>
