--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <!-- Banner -->
     <div class="alert alert-danger text-center" role="alert">
         <h4 class="alert-heading">Welcome to the Underground!</h4>
-        <p class="text-red">This is a simulated cyber-crime forum for CTI education. Stay anonymous.</p>
+        <p class="text-light">This is a simulated cyber-crime forum for CTI education. Stay anonymous.</p>
     </div>
 
     <!-- Shoutbox -->
