--- a/templates/profile_detail.html
+++ b/templates/profile_detail.html
@@ -3,7 +3,7 @@
 {% block title %}Profile - {{ user.username }} - Cyber Forum{% endblock %}
 {% block content %}
     <h2 class="text-light">Profile: {{ user.username }}</h2>
-    <div class="card bg-dark border-secondary">
+    <div class="card bg-dark border-secondary mb-4">
         <div class="card-body">
             <div class="d-flex align-items-center">
                 <img src="{{ url_for('static', filename='avatars/' + user.avatar) }}" alt="{{ user.username }}'s avatar" class="rounded-circle me-3" style="width: 50px; height: 50px;">
@@ -12,6 +12,43 @@
                     <p class="text-light mb-0">Total Posts: {{ post_count }}</p>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="card bg-dark border-secondary">
+        <div class="card-header text-light">User Posts</div>
+        <div class="card-body">
+            {% if posts %}
+                <table class="table table-dark table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th scope="col">Type</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Content/Description</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Comments</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-light">
+                        {% for post in posts %}
+                            <tr>
+                                <td>{{ post.post_type | capitalize }}</td>
+                                <td>{{ post.category }}</td>
+                                <td>{{ post.title }}</td>
+                                <td>{{ post.content or post.description or '' }}</td>
+                                <td>{{ post.price or 'N/A' }}</td>
+                                <td>{{ post.date }}</td>
+                                <td>{{ post.comments }}</td>
+                                <td><a href="{{ url_for('post_detail', post_type=post.post_type, post_id=post.id) }}" class="btn btn-outline-secondary btn-sm">View</a></td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p class="text-light">No posts by this user.</p>
+            {% endif %}
         </div>
     </div>
     <a href="{{ url_for('home') }}" class="btn btn-outline-secondary mt-3">Back to Home</a>
