--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -2,6 +2,7 @@
 {% extends 'base.html' %}
 {% block title %}Post - {{ post.title }} - Cyber Forum{% endblock %}
 {% block content %}
+<div class="container mt-4">
     <h2 class="text-light">{{ post.title }}</h2>
     <div class="card bg-dark border-secondary mb-4">
         <div class="card-body">
@@ -10,26 +11,13 @@
                 {% if post_type == 'announcements' %}
                     {{ post.content }}
                 {% else %}
-                    {{ post.description }}
+                    {{ post.description | safe }}
                     <br><strong>Price:</strong> {{ post.price or 'N/A' }}
                 {% endif %}
-                <br><strong>Posted by:</strong> <a href="{{ url_for('profile_detail', username=post.user.username) }}" class="text-light">{{ post.user.username }}</a>
+                <br>
+                <br><strong>Posted by:</strong> <a href="{{ url_for('profile_detail', username=post.author.username) }}" class="text-light">{{ post.author.username }}</a>
                 <br><strong>Date:</strong> {{ post.date }}
             </p>
-        </div>
-    </div>
-
-    <!-- User Profile -->
-    <div class="card bg-dark border-secondary mb-4">
-        <div class="card-header text-light">User Profile</div>
-        <div class="card-body">
-            <div class="d-flex align-items-center">
-                <img src="{{ url_for('static', filename='avatars/' + user.avatar) }}" alt="{{ user.username }}'s avatar" class="rounded-circle me-3" style="width: 50px; height: 50px;">
-                <div>
-                    <h5 class="text-light mb-0"><a href="{{ url_for('profile_detail', username=user.username) }}" class="text-light">{{ user.username }}</a></h5>
-                    <p class="text-light mb-0">Total Posts: {{ post_count }}</p>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -40,7 +28,7 @@
             {% if comments %}
                 {% for comment in comments %}
                     <div class="mb-3">
-                        <p class="text-light"><strong>{{ comment.user.username }}</strong> ({{ comment.date }}): {{ comment.content }}</p>
+                        <p class="text-light"><strong>{{ comment.author.username }}</strong> ({{ comment.date }}): {{ comment.content }}</p>
                     </div>
                 {% endfor %}
             {% else %}
@@ -49,4 +37,5 @@
         </div>
     </div>
     <a href="{{ url_for('category', post_type=post_type, category=post.category) }}" class="btn btn-outline-secondary mt-3">Back to {{ post.category }}</a>
+</div>
 {% endblock %}
