--- a/templates/profile_detail.html
+++ b/templates/profile_detail.html
@@ -2,6 +2,7 @@
 {% extends 'base.html' %}
 {% block title %}Profile - {{ user.username }} - Cyber Forum{% endblock %}
 {% block content %}
+<div class="container mt-4">
     <h2 class="text-light">Profile: {{ user.username }}</h2>
     <div class="card bg-dark border-secondary mb-4">
         <div class="card-body">
@@ -14,7 +15,7 @@
             </div>
         </div>
     </div>
-    <div class="card bg-dark border-secondary">
+    <div class="card bg-dark border-secondary mb-4">
         <div class="card-header text-light">User Posts</div>
         <div class="card-body">
             {% if posts %}
@@ -49,5 +50,37 @@
             {% endif %}
         </div>
     </div>
+    <div class="card bg-dark border-secondary mb-4">
+        <div class="card-header text-light">User Comments</div>
+        <div class="card-body">
+            {% if user.comments %}
+                <table class="table table-dark table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th scope="col">Post Type</th>
+                            <th scope="col">Comment</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-light">
+                        {% for comment in user.comments %}
+                            <tr>
+                                <td>{{ comment.post_type | capitalize }}</td>
+                                <td>{{ comment.content }}</td>
+                                <td>{{ comment.date }}</td>
+                                <td>
+                                    <a href="{{ url_for('post_detail', post_type=comment.post_type, post_id=comment.post_id) }}" class="btn btn-outline-secondary btn-sm">View Post</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}
+                <p class="text-light">No comments by this user.</p>
+            {% endif %}
+        </div>
+    </div>
     <a href="{{ url_for('home') }}" class="btn btn-outline-secondary mt-3">Back to Home</a>
+</div>
 {% endblock %}
